--- a/index.html
+++ b/index.html
@@ -209,15 +209,8 @@
             aspect-ratio: 4 / 3;
             overflow: hidden;
             border-radius: 8px;
-            border: 2px solid rgba(255, 255, 255, 0.2);
+            border: none;
             cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .photo-item:hover {
-            transform: scale(1.05);
-            border-color: #008000;
-            box-shadow: 0 6px 20px rgba(0, 100, 0, 0.4);
         }
 
         .photo-item img {
