--- a/index.html
+++ b/index.html
@@ -12,24 +12,36 @@
             box-sizing: border-box;
         }
 
+        html {
+            height: 100%;
+            height: 100dvh;
+            overflow-x: hidden;
+        }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 50%, #16213e 100%);
+            min-height: 100%;
             min-height: 100vh;
+            min-height: 100dvh;
+            height: 100%;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             padding: 20px;
             position: relative;
+            overflow-x: hidden;
         }
 
         #starsCanvas {
             position: fixed;
             top: 0;
             left: 0;
-            width: 100%;
-            height: 100%;
+            width: 100vw;
+            width: 100dvw;
+            height: 100vh;
+            height: 100dvh;
             z-index: 0;
             pointer-events: none;
         }
