--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             position: fixed;
             width: 100%;
             width: 100dvw;
+            background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 50%, #16213e 100%);
         }
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 50%, #16213e 100%);
+            background: transparent;
             min-height: 100%;
             min-height: 100vh;
             min-height: 100dvh;
@@ -42,6 +43,7 @@
             left: 0;
             overflow-x: hidden;
             overflow-y: auto;
+            margin: 0;
         }
 
         #starsCanvas {
@@ -65,6 +67,7 @@
             text-align: center;
             max-width: 600px;
             width: 100%;
+            background: transparent;
         }
 
         h1 {
@@ -355,7 +358,7 @@
             }
 
             body {
-                padding: 10px;
+                padding: 0;
             }
 
             #starsCanvas {
