New image in array

--- a/index.html
+++ b/index.html
@@ -689,6 +689,7 @@
             'images/IMG_6830.jpg',
             'images/IMG_6831.jpg',
             'images/IMG_6832.jpg',
+            'images/IMG_7253.jpg',
             'images/IMG_9225.jpg',
             'images/IMG_9627.jpg'
         ];
