--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             position: fixed;
             width: 100%;
             width: 100dvw;
-            background: linear-gradient(135deg, #0a0e27 0%, #1a1a2e 50%, #16213e 100%);
+            background: linear-gradient(135deg, #1a0a0e 0%, #2d0f14 40%, #1f0a0d 100%);
         }
 
         body {
@@ -73,21 +73,22 @@
         h1 {
             font-size: 64px;
             font-weight: 300;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.95);
             margin-bottom: 20px;
             letter-spacing: 2px;
+            text-shadow: 0 0 30px rgba(180, 80, 100, 0.2);
         }
 
         .countdown-text {
             font-size: 14px;
-            color: rgba(255, 255, 255, 0.7);
+            color: rgba(255, 220, 230, 0.75);
             margin-bottom: 40px;
             letter-spacing: 1px;
         }
 
         .countdown-timer {
             font-size: 16px;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.9);
             font-weight: 300;
             letter-spacing: 1px;
         }
@@ -102,29 +103,48 @@
         }
 
         .option-button {
-            background: rgba(26, 26, 46, 0.6);
-            border: 2px solid rgba(255, 255, 255, 0.2);
+            background: rgba(60, 15, 25, 0.5);
+            border: 2px solid rgba(200, 120, 140, 0.25);
             border-radius: 12px;
             padding: 20px;
             font-size: 32px;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.95);
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+            box-shadow: 0 4px 15px rgba(80, 20, 35, 0.4);
             min-height: 70px;
             aspect-ratio: 1;
             backdrop-filter: blur(10px);
         }
 
         .option-button:hover {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: rgba(255, 255, 255, 0.4);
+            background: rgba(100, 35, 50, 0.5);
+            border-color: rgba(220, 150, 170, 0.4);
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(255, 255, 255, 0.2);
+            box-shadow: 0 6px 20px rgba(180, 80, 100, 0.25);
+        }
+
+        .valentine-button {
+            margin-top: 24px;
+            padding: 12px 24px;
+            font-size: 15px;
+            color: rgba(255, 220, 230, 0.9);
+            background: rgba(80, 25, 40, 0.5);
+            border: 1px solid rgba(200, 120, 140, 0.3);
+            border-radius: 999px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            letter-spacing: 0.5px;
+        }
+
+        .valentine-button:hover {
+            background: rgba(100, 40, 55, 0.6);
+            border-color: rgba(220, 150, 170, 0.5);
+            color: #fff;
         }
 
         .option-button i {
@@ -138,7 +158,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.5);
+            background: rgba(20, 5, 10, 0.6);
             z-index: 1000;
             align-items: center;
             justify-content: center;
@@ -150,16 +170,16 @@
         }
 
         .modal-content {
-            background: rgba(10, 14, 39, 0.95);
+            background: rgba(45, 15, 22, 0.96);
             border-radius: 16px;
             padding: 40px;
             max-width: 800px;
             width: 100%;
             max-height: 90vh;
             overflow-y: auto;
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.5);
+            box-shadow: 0 10px 40px rgba(60, 15, 25, 0.5);
             position: relative;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            border: 1px solid rgba(180, 100, 120, 0.2);
             backdrop-filter: blur(10px);
         }
 
@@ -170,7 +190,7 @@
             background: none;
             border: none;
             font-size: 32px;
-            color: #2c3e50;
+            color: rgba(255, 220, 230, 0.7);
             cursor: pointer;
             width: 40px;
             height: 40px;
@@ -182,35 +202,35 @@
         }
 
         .close-button:hover {
-            background: rgba(255, 255, 255, 0.1);
-            color: #ffffff;
+            background: rgba(180, 80, 100, 0.2);
+            color: #fff;
         }
 
         .modal-title {
             font-size: 32px;
-            color: #2c3e50;
+            color: rgba(255, 255, 255, 0.9);
             margin-bottom: 30px;
             text-align: center;
         }
 
         .weather-content {
             font-size: 18px;
-            color: #2c3e50;
+            color: rgba(255, 230, 240, 0.85);
             line-height: 1.8;
         }
 
         .weather-location {
             margin-bottom: 30px;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(80, 25, 35, 0.3);
             border-radius: 8px;
-            border-left: 4px solid rgba(255, 255, 255, 0.3);
+            border-left: 4px solid rgba(200, 120, 140, 0.4);
         }
 
         .weather-location h3 {
             font-size: 24px;
             margin-bottom: 15px;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.95);
         }
 
         .weather-info {
@@ -241,43 +261,43 @@
 
         .notes-content {
             font-size: 18px;
-            color: #2c3e50;
+            color: rgba(255, 230, 240, 0.85);
             line-height: 1.8;
         }
 
         .note-item {
             padding: 20px;
             margin-bottom: 20px;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(80, 25, 35, 0.3);
             border-radius: 8px;
-            border-left: 4px solid rgba(255, 255, 255, 0.3);
+            border-left: 4px solid rgba(200, 120, 140, 0.4);
         }
 
         .loading {
             text-align: center;
-            color: rgba(255, 255, 255, 0.7);
+            color: rgba(255, 220, 230, 0.8);
             font-size: 18px;
             padding: 20px;
         }
 
         .distance-content {
             font-size: 18px;
-            color: #2c3e50;
+            color: rgba(255, 230, 240, 0.85);
             line-height: 1.8;
         }
 
         .distance-info {
             margin-bottom: 30px;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(80, 25, 35, 0.3);
             border-radius: 8px;
-            border-left: 4px solid rgba(255, 255, 255, 0.3);
+            border-left: 4px solid rgba(200, 120, 140, 0.4);
         }
 
         .distance-info h3 {
             font-size: 24px;
             margin-bottom: 15px;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.95);
         }
 
         .map-container {
@@ -286,7 +306,7 @@
             border-radius: 8px;
             overflow: hidden;
             margin-top: 20px;
-            border: 2px solid rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(180, 100, 120, 0.25);
         }
 
         .map-container iframe {
@@ -297,15 +317,15 @@
 
         .music-content {
             font-size: 18px;
-            color: #2c3e50;
+            color: rgba(255, 230, 240, 0.85);
         }
 
         .playlist-container {
             margin-bottom: 30px;
             border-radius: 12px;
-            border: 2px solid rgba(255, 255, 255, 0.2);
+            border: 2px solid rgba(180, 100, 120, 0.25);
             overflow: hidden;
-            background: #000000;
+            background: #0d0a0b;
         }
 
         .playlist-container:last-child {
@@ -320,7 +340,7 @@
 
         .timeline-content {
             font-size: 18px;
-            color: #2c3e50;
+            color: rgba(255, 230, 240, 0.85);
             position: relative;
             padding: 20px 0;
         }
@@ -329,7 +349,7 @@
             position: relative;
             padding-left: 40px;
             padding-bottom: 40px;
-            border-left: 3px solid rgba(255, 255, 255, 0.3);
+            border-left: 3px solid rgba(200, 120, 140, 0.35);
         }
 
         .timeline-item:last-child {
@@ -344,22 +364,58 @@
             width: 16px;
             height: 16px;
             border-radius: 50%;
-            background: rgba(255, 255, 255, 0.6);
-            border: 3px solid #0a0e27;
-            box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.3), 0 0 10px rgba(255, 255, 255, 0.3);
+            background: rgba(200, 120, 140, 0.6);
+            border: 3px solid #2d0f14;
+            box-shadow: 0 0 0 2px rgba(200, 120, 140, 0.3), 0 0 10px rgba(180, 80, 100, 0.25);
         }
 
         .timeline-date {
             font-size: 20px;
             font-weight: bold;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.95);
             margin-bottom: 8px;
         }
 
         .timeline-event {
             font-size: 16px;
-            color: #2c3e50;
+            color: rgba(255, 230, 240, 0.85);
             line-height: 1.6;
+        }
+
+        .valentine-modal .modal-content {
+            text-align: center;
+            max-width: 420px;
+        }
+
+        .valentine-question {
+            font-size: 26px;
+            color: rgba(255, 255, 255, 0.95);
+            margin-bottom: 28px;
+            line-height: 1.4;
+        }
+
+        .valentine-options {
+            display: flex;
+            gap: 16px;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .valentine-option {
+            padding: 14px 28px;
+            font-size: 18px;
+            color: rgba(255, 255, 255, 0.95);
+            background: rgba(120, 40, 55, 0.5);
+            border: 2px solid rgba(200, 120, 140, 0.4);
+            border-radius: 12px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .valentine-option:hover {
+            background: rgba(160, 60, 85, 0.6);
+            border-color: rgba(220, 150, 170, 0.6);
+            transform: scale(1.05);
         }
 
         @media (max-width: 768px) {
@@ -425,6 +481,7 @@
             <button class="option-button" onclick="showMusic()" title="music"><i class="fas fa-music"></i></button>
             <button class="option-button" onclick="showTimeline()" title="timeline"><i class="fas fa-calendar-alt"></i></button>
         </div>
+        <button type="button" class="valentine-button" onclick="showValentineModal()">what's this?</button>
     </div>
 
     <!-- Weather Modal -->
@@ -454,11 +511,15 @@
             <h2 class="modal-title">notes</h2>
             <div id="notesContent" class="notes-content">
                 <div class="note-item">
-                    <p style="margin-top: 10px; color: #666; font-size: 14px;">1/28/2025 7:50 PM</p>
+                    <p style="margin-top: 10px; color: rgba(255, 220, 230, 0.6); font-size: 14px;">2/6/2026</p>
+                    <p style="margin-top: 15px;">thank u for being with me at my best and my worst. always grateful for u</p>
+                </div>
+                <div class="note-item">
+                    <p style="margin-top: 10px; color: rgba(255, 220, 230, 0.6); font-size: 14px;">1/28/2025 7:50 PM</p>
                     <p style="margin-top: 15px;">you looked gorgeous on the phone, i am so lucky to have u</p>
                 </div>
                 <div class="note-item">
-                    <p style="margin-top: 10px; color: #666; font-size: 14px;">1/21/2026</p>
+                    <p style="margin-top: 10px; color: rgba(255, 220, 230, 0.6); font-size: 14px;">1/21/2026</p>
                     <p style="margin-top: 15px;">love ya! keeping this so i can write notes here</p>
                 </div>
             </div>
@@ -491,6 +552,18 @@
                 <div class="playlist-container">
                     <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7G5VgdvUREXtiLFPXSi3p3?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Valentine Modal -->
+    <div id="valentineModal" class="modal valentine-modal">
+        <div class="modal-content">
+            <button class="close-button" onclick="closeModal('valentineModal')">&times;</button>
+            <p class="valentine-question">will you be my valentine?</p>
+            <div class="valentine-options">
+                <button type="button" class="valentine-option" onclick="closeModal('valentineModal')">yes</button>
+                <button type="button" class="valentine-option" onclick="closeModal('valentineModal')">yes</button>
             </div>
         </div>
     </div>
@@ -638,13 +711,13 @@
                 // Draw star
                 ctx.beginPath();
                 ctx.arc(star.x, star.y, star.radius, 0, Math.PI * 2);
-                ctx.fillStyle = `rgba(255, 255, 255, ${star.opacity})`;
+                ctx.fillStyle = `rgba(255, 235, 245, ${star.opacity})`;
                 ctx.fill();
                 
                 // Add glow effect for some stars
                 if (star.radius > 1) {
                     ctx.shadowBlur = 10;
-                    ctx.shadowColor = 'rgba(255, 255, 255, 0.8)';
+                    ctx.shadowColor = 'rgba(255, 220, 235, 0.7)';
                     ctx.fill();
                     ctx.shadowBlur = 0;
                 }
@@ -856,7 +929,7 @@
                         allowfullscreen>
                     </iframe>
                 </div>
-                <p style="margin-top: 10px; text-align: center; font-size: 14px; color: #666;">
+                <p style="margin-top: 10px; text-align: center; font-size: 14px; color: rgba(255, 220, 230, 0.6);">
                     <a href="https://www.openstreetmap.org/?mlat=${centerLat}&mlon=${centerLon}&zoom=7" target="_blank" style="color: rgba(255, 255, 255, 0.7);">view larger map</a>
                 </p>
             `;
@@ -868,6 +941,10 @@
 
         function showTimeline() {
             showModal('timelineModal');
+        }
+
+        function showValentineModal() {
+            showModal('valentineModal');
         }
     </script>
 </body>
