--- a/index.html
+++ b/index.html
@@ -852,6 +852,7 @@
             'images/IMG_6831.jpg',
             'images/IMG_6832.jpg',
             'images/IMG_7253.jpg',
+            'images/IMG_7653.jpg',
             'images/IMG_9225.jpg',
             'images/IMG_9627.jpg'
         ];
