--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
         <div class="options">
             <button class="option-button" onclick="showWeather()" title="weather"><i class="bi bi-cloud-sun"></i><span class="option-label">weather</span></button>
             <button class="option-button" onclick="showPhotos()" title="photos"><i class="bi bi-images"></i><span class="option-label">photos</span></button>
-            <button class="option-button" onclick="showNotes()" title="notes"><i class="bi bi-journal-heart"></i><span class="option-label">notes</span></button>
+            <button class="option-button" onclick="showNotes()" title="notes"><i class="bi bi-journal-text"></i><span class="option-label">notes</span></button>
             <button class="option-button" onclick="showDistance()" title="distance"><i class="bi bi-geo-alt"></i><span class="option-label">distance</span></button>
             <button class="option-button" onclick="showMusic()" title="music"><i class="bi bi-music-note-beamed"></i><span class="option-label">music</span></button>
             <button class="option-button" onclick="showTimeline()" title="timeline"><i class="bi bi-calendar3"></i><span class="option-label">timeline</span></button>
@@ -632,7 +632,7 @@
     <div id="notesModal" class="modal">
         <div class="modal-content">
             <button class="close-button" onclick="closeModal('notesModal')">&times;</button>
-            <h2 class="modal-title"><i class="bi bi-journal-heart" aria-hidden="true"></i> notes</h2>
+            <h2 class="modal-title"><i class="bi bi-journal-text" aria-hidden="true"></i> notes</h2>
             <div id="notesContent" class="notes-content">
                 <div class="note-item">
                     <p class="note-date">1/21/2026</p>
