Updated Notes and Timeline

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>will + jolene</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
@@ -51,7 +51,7 @@
         }
 
         body {
-            font-family: 'Outfit', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            font-family: 'DM Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
             background: transparent;
             min-height: 100%;
             min-height: 100vh;
@@ -104,7 +104,7 @@
 
         h1 {
             font-size: clamp(2.5rem, 8vw, 4rem);
-            font-weight: 500;
+            font-weight: 300;
             color: #fff;
             margin-bottom: 0.5rem;
             letter-spacing: 0.2em;
@@ -933,6 +933,7 @@
         if (moonEl) moonEl.textContent = "tonight's moon: " + getMoonPhase();
 
         const images = [
+            'images/IMG_0321.jpg',
             'images/IMG_0972.jpg',
             'images/IMG_0993.jpg',
             'images/IMG_6354.jpg',
