--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="">
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
     <style>
         * {
             margin: 0;
@@ -1035,12 +1034,23 @@
         const moonEl = document.getElementById('moonPhase');
         if (moonEl) moonEl.textContent = "tonight's moon: " + getMoonPhase();
 
-        // Supabase: use your Project URL + anon key (from Project Settings → API)
+        // Supabase: loaded only when Messages is opened so it never blocks the rest of the site
         const SUPABASE_URL = 'https://ocjqondxkscnrtjcqvsx.supabase.co';
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9janFvbmR4a3NjbnJ0amNxdnN4Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzE2NDExMTcsImV4cCI6MjA4NzIxNzExN30.Ac5Me_JASuyn0LbCm1uV7U44VUVT_KXJw1D2zwCio1E';
-        const supabase = typeof window.supabase !== 'undefined'
-            ? window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY)
-            : null;
+        let supabase = null;
+        function getSupabase(cb) {
+            if (supabase) { cb(supabase); return; }
+            var s = document.createElement('script');
+            s.src = 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js';
+            s.onload = function() {
+                try {
+                    supabase = window.supabase && window.supabase.createClient ? window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY) : null;
+                } catch (e) { supabase = null; }
+                cb(supabase);
+            };
+            s.onerror = function() { cb(null); };
+            document.head.appendChild(s);
+        }
 
         const images = [
             'images/IMG_0321.jpg',
@@ -1275,16 +1285,16 @@
             showModal('timelineModal');
         }
 
-        async function loadMessages() {
+        async function loadMessages(client) {
             const listEl = document.getElementById('messagesList');
             if (!listEl) return;
-            if (!supabase) {
-                listEl.innerHTML = '<p class="loading">Supabase not loaded. Check script.</p>';
+            if (!client) {
+                listEl.innerHTML = '<p class="loading">Could not load messages. Check connection.</p>';
                 return;
             }
             listEl.innerHTML = '<p class="loading">loading messages...</p>';
             try {
-                const { data, error } = await supabase
+                const { data, error } = await client
                     .from('messages')
                     .select('id, from_name, message, created_at')
                     .order('created_at', { ascending: false })
@@ -1308,36 +1318,31 @@
 
         function showMessages() {
             showModal('messagesModal');
-            loadMessages();
+            getSupabase(function(client) { loadMessages(client); });
         }
 
         document.getElementById('messageForm')?.addEventListener('submit', async function (e) {
             e.preventDefault();
-            if (!supabase) return;
             const fromEl = document.getElementById('messageFrom');
             const textEl = document.getElementById('messageText');
             const from = fromEl?.value?.trim();
             const message = textEl?.value?.trim();
             if (!from || !message) return;
             const submitBtn = this.querySelector('.message-submit');
-            if (submitBtn) {
-                submitBtn.disabled = true;
-                submitBtn.textContent = 'Sending...';
-            }
-            try {
-                const { error } = await supabase.from('messages').insert([{ from_name: from, message: message }]);
-                if (error) throw error;
-                textEl.value = '';
-                await loadMessages();
-            } catch (err) {
-                console.error(err);
-                if (submitBtn) submitBtn.textContent = 'Send';
-                alert('Could not send. Check RLS allows insert.');
-            }
-            if (submitBtn) {
-                submitBtn.disabled = false;
-                submitBtn.textContent = 'Send';
-            }
+            if (submitBtn) { submitBtn.disabled = true; submitBtn.textContent = 'Sending...'; }
+            getSupabase(async function(client) {
+                if (!client) { if (submitBtn) { submitBtn.disabled = false; submitBtn.textContent = 'Send'; } alert('Could not connect.'); return; }
+                try {
+                    const { error } = await client.from('messages').insert([{ from_name: from, message: message }]);
+                    if (error) throw error;
+                    textEl.value = '';
+                    await loadMessages(client);
+                } catch (err) {
+                    console.error(err);
+                    alert('Could not send. Check RLS allows insert.');
+                }
+                if (submitBtn) { submitBtn.disabled = false; submitBtn.textContent = 'Send'; }
+            });
         });
 
     </script>
