--- a/messages.html
+++ b/messages.html
@@ -6,7 +6,7 @@
   <title>messages — will + jolene</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700&family=Sora:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -26,61 +26,72 @@
     </div>
   </nav>
 
-  <main class="main">
-    <div class="container">
+  <main class="main main-messages">
+    <div class="messages-wrap">
       <h1 class="page-title"><i class="bi bi-chat-dots"></i> messages</h1>
-      <div id="messagesList" class="list"></div>
-      <form id="messageForm" class="card">
-        <select id="messageFrom" required>
-          <option value="">— who's writing? —</option>
-          <option value="Will">Will</option>
-          <option value="Jolene">Jolene</option>
-        </select>
-        <textarea id="messageText" placeholder="Leave a message..." rows="3" required></textarea>
-        <button type="submit" class="btn">Send</button>
-      </form>
+      <div id="messagesList" class="chat-thread"></div>
+      <div class="compose-row">
+        <div class="compose-side compose-will">
+          <label class="compose-label">Will</label>
+          <textarea id="willText" placeholder="Type a message..." rows="2"></textarea>
+          <button type="button" class="btn btn-will" id="sendWill">Send</button>
+        </div>
+        <div class="compose-side compose-jolene">
+          <label class="compose-label">Jolene</label>
+          <textarea id="joleneText" placeholder="Type a message..." rows="2"></textarea>
+          <button type="button" class="btn btn-jolene" id="sendJolene">Send</button>
+        </div>
+      </div>
     </div>
   </main>
 
   <script src="js/shared.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script>
     function loadMessages(client) {
       var el = document.getElementById('messagesList');
       if (!el) return;
       if (!client) { el.innerHTML = '<p class="loading">Could not connect.</p>'; return; }
       el.innerHTML = '<p class="loading">loading...</p>';
-      client.from('messages').select('id, from_name, message, created_at').order('created_at', { ascending: false }).limit(50)
+      client.from('messages').select('id, from_name, message, created_at').order('created_at', { ascending: true }).limit(100)
         .then(function(r) {
           if (r.error) throw r.error;
-          if (!r.data || r.data.length === 0) { el.innerHTML = '<p class="loading">No messages yet.</p>'; return; }
+          if (!r.data || r.data.length === 0) { el.innerHTML = '<p class="loading chat-empty">No messages yet. Say something!</p>'; return; }
           el.innerHTML = r.data.map(function(row) {
-            var time = row.created_at ? new Date(row.created_at).toLocaleString(undefined, { dateStyle: 'short', timeStyle: 'short' }) : '';
-            var from = (row.from_name || '').replace(/</g, '&lt;');
-            var body = (row.message || '').replace(/</g, '&lt;').replace(/\n/g, '<br>');
-            return '<div class="list-item"><p class="who">' + from + '</p><p class="body">' + body + '</p><p class="meta">' + time + '</p></div>';
+            var time = row.created_at ? new Date(row.created_at).toLocaleTimeString(undefined, { hour: 'numeric', minute: '2-digit', hour12: true }) : '';
+            var body = (row.message || '').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/\n/g, '<br>');
+            var isWill = (row.from_name || '').toLowerCase().indexOf('will') !== -1;
+            var side = isWill ? 'msg-will' : 'msg-jolene';
+            return '<div class="chat-bubble ' + side + '"><div class="chat-body">' + body + '</div><span class="chat-time">' + time + '</span></div>';
           }).join('');
+          el.scrollTop = el.scrollHeight;
+          if (window.gsap && el.querySelector('.chat-bubble')) {
+            gsap.fromTo(el.querySelectorAll('.chat-bubble'), { opacity: 0, y: 10 }, { opacity: 1, y: 0, duration: 0.35, stagger: 0.03, ease: 'power2.out' });
+          }
         })
         .catch(function(err) { el.innerHTML = '<p class="loading">Could not load messages.</p>'; console.error(err); });
     }
-    getSupabase(function(c) { loadMessages(c); });
-    document.getElementById('messageForm').addEventListener('submit', function(e) {
-      e.preventDefault();
-      var from = document.getElementById('messageFrom').value.trim();
-      var message = document.getElementById('messageText').value.trim();
-      if (!from || !message) return;
-      var btn = this.querySelector('.btn');
-      if (btn) { btn.disabled = true; btn.textContent = 'Sending...'; }
+    function send(from, textareaId, btnId) {
+      var text = document.getElementById(textareaId).value.trim();
+      if (!text) return;
+      var btn = document.getElementById(btnId);
+      if (btn) { btn.disabled = true; btn.textContent = '…'; }
       getSupabase(function(client) {
         if (!client) { if (btn) { btn.disabled = false; btn.textContent = 'Send'; } return; }
-        client.from('messages').insert([{ from_name: from, message: message }]).then(function(r) {
+        client.from('messages').insert([{ from_name: from, message: text }]).then(function(r) {
           if (r.error) throw r.error;
-          document.getElementById('messageText').value = '';
+          document.getElementById(textareaId).value = '';
           loadMessages(client);
+          var list = document.getElementById('messagesList');
+          if (list) list.scrollTop = list.scrollHeight;
         }).catch(function(err) { console.error(err); alert('Could not send.'); }).finally(function() {
           if (btn) { btn.disabled = false; btn.textContent = 'Send'; }
         });
       });
-    });
+    }
+    getSupabase(function(c) { loadMessages(c); });
+    document.getElementById('sendWill').addEventListener('click', function() { send('Will', 'willText', 'sendWill'); });
+    document.getElementById('sendJolene').addEventListener('click', function() { send('Jolene', 'joleneText', 'sendJolene'); });
   </script>
 </body>
 </html>
